--- a/src/main/resources/validation-message.properties
+++ b/src/main/resources/validation-message.properties
@@ -1,5 +1,5 @@
 dept.name.empty=\u90e8\u9580\u540d\u7a31\u4e0d\u53ef\u7a7a\u767d
 club.name.empty=\u793e\u5718\u540d\u7a31\u4e0d\u53ef\u7a7a\u767d
 emp.name.empty=\u54e1\u5de5\u540d\u7a31\u4e0d\u53ef\u7a7a\u767d
-salary.empty.empty=\u85aa\u8cc7\u4e0d\u53ef\u7a7a\u767d
-salary.empty.notenough=\u85aa\u8cc7\u4e0d\u53ef\u904e\u4f4e
+salary.money.empty=\u85aa\u8cc7\u4e0d\u53ef\u7a7a\u767d
+salary.money.notenough=\u85aa\u8cc7\u4e0d\u53ef\u904e\u4f4e
