--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,13 @@
             <version>1.4</version>
         </dependency>
 
+        <!-- Google api -->
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.30.10</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
